fix: gap

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -35,7 +35,7 @@ footer:first-of-type {
     display: flex;
 
     &.wp-block-group-is-layout-flex {
-      gap: 24;
+      gap: 24px;
     }
   }
 }
